[package]
name = "bevy_client_server_events"
version = "0.5.1"
edition = "2021"
categories = ["networking", "game", "bevy"]
description = "Simplified game networking"
exclude = ["assets/", ".github/", ".gitignore"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/edouardpoitras/bevy_client_server_events"

[dependencies]
bevy = "0.11"
bevy_renet = "0.0.9"
bincode = "2.0.0-rc.3"
paste = "1.0"
renet = "0.0.13"

# Full optimizations for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

# For release builds, enable Link-Time-Optimizations.
[profile.release]
lto = "thin"
